[package]
name = "wasm-flow-implemetation"
version = "0.1.0"
authors = ["Hope410 <timurbabkin.pshh@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
cgmath = "0.18.0"
bracket-noise = "0.8.2"
bracket-random = "0.8.2"
getrandom = {version = "0.2.2", features = ["js"]}

[dependencies.web-sys]
version = "0.3.50"
features = [
  'CanvasRenderingContext2d',
  'console'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
debug = true
lto = true
opt-level = "s"
